--- a/Paláki.mw
+++ b/Paláki.mw
@@ -1,3 +1,8 @@
 [[category:esálela]]
 {{ndámbo}}
 [[Image:Etiquette cd-rom 01.png|thumb|*]]
+
+[[de:CD-ROM]] 
+[[en:CD-ROM]] 
+[[es:CD-ROM]] 
+[[fr:Cédérom]]
