--- a/Nsábi.mw
+++ b/Nsábi.mw
@@ -1,5 +1,13 @@
 {{ndámbo}}
+[[category:Mizíki]]
+[[category:Fízíkí]]
 
-
-
+[[de:Lautsprecherbox]]
+[[en:Loudspeaker]]
+[[eo:Laŭtparolilo]]
+[[es:Altavoz]]
 [[fr:haut-parleur]]
+[[id:Speaker]]
+[[it:Altoparlante]]
+[[nl:Luidspreker]]
+[[pt:Altifalante]]
