*Empty MediaWiki Message*

--- a/Nsábi.mw
+++ b/Nsábi.mw
@@ -1,6 +1,5 @@
 {{ndámbo}}
-[[Bild:StudioMonitore_mit_KuH.jpg|framed|Nsábi (v.l.n.r.: Tannoy, Dynaudio, Genelec, K&H)]]
-[[Bild:Akustischer_Kurzschluss4.png|thumb|150px|Nsábi]]
+[[image:Akustischer_Kurzschluss4.png|thumb|150px|Nsábi]]
 [[category:Mizíki]]
 [[category:Fízíkí]]
 
