*Empty MediaWiki Message*

--- a/Ebimiselo.mw
+++ b/Ebimiselo.mw
@@ -1,4 +1,4 @@
 [[Image:Apple Color LaserWriter 12-600 PS.jpg|thumb|*]]
 {{ndámbo}}
-[[category:esálela]]
+[[category:Bongana masíni]]
 [[fr:Imprimante]]
