*Empty MediaWiki Message*

--- a/Emɔ́nisi.mw
+++ b/Emɔ́nisi.mw
@@ -2,7 +2,7 @@
 
 {{ndámbo}}
 
-[[category:Esálela]]
+[[category:Bongana masíni]]
 [[de:Bildschirm]]
 [[en:Computer display]]
 [[fr:Moniteur d'ordinateur]]
