*Empty MediaWiki Message*

--- a/Etángela.mw
+++ b/Etángela.mw
@@ -2,6 +2,7 @@
 [[Image:Diskettenlaufwerk.jpg|thumb|*]]
 {{ndámbo}}
 
+[[category:Bongana masíni]]
 [[category:esálela]]
 [[fr:Mémoire informatique]]
 [[de:Massenspeicher]]
