*Empty MediaWiki Message*

--- a/Liboke_ya_Congo.mw
+++ b/Liboke_ya_Congo.mw
@@ -12,4 +12,4 @@
 ==Nkásá o libándá==
 The RULE-Project, an open source-initiative on functional recycling of PC-hardware; see also http://www.rule-project.org
 
-[[category:esálela]]
+[[category:Bongana masíni]]
