*Empty MediaWiki Message*

--- a/Mángolá.mw
+++ b/Mángolá.mw
@@ -1,6 +1,7 @@
 [[Image:Keyboard-gray-old.jpg|thumb|*]]
 {{ndámbo}}
 [[category:Esálela]]
+[[category:Bongana masíni]]
 [[de:Tastatur]]
 [[en:Computer keyboard]]
 [[fr:Clavier informatique]]
