--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -24,7 +24,7 @@ Lisakoli ya molongo oyo ya makoki ya moto
 lokola eloko oyo bato pe bikolo nyonso balingi babwa, po te bato pe mangomba nyonso, na bobatelaka tango nyonso Lisakoli yango na moteme, basala makasi na boteyi pe bokolisi bwanya, po ‘te makoki pe bonsomi yango etosama pe basala ‘te bandima pe basalela yango na bosolo penza na molongo mobimba, ezala na kati ya bato ya Bikolo ya Lisanga bango moko to na kati ya ekolo pe molongo mobimba.
 
 ==Eténi yambo (1)==
-Bato nyonso na mbotama bazali nzomi pe bakokani na limemya pe makoki. Bazali na mayele pe base, geli kofanda na bondeko okati na bango.
+Bato nyonso na mbotama bazali nzomi pe bakokani na limemya pe makoki. Bazali na mayele pe basengeli kofanda na bondeko okati na bango.
 
 ==Eténi ya 2==
 Moto nyonso azali na makoki pe bonsomi nyonso oyo elimbolami na kati ya Lisakoli oyo, bokeseni ata moke te, na mambi matali loposo ya nzoto, bomwasi to bobali, lokota, lingomba ya nzambe, makanisi ya politiki to ya ndenge mosusu, ekolo to longomba ya bato, bokulaka, mbotama to makambo mosusu.
