--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -154,7 +154,7 @@ __NOTOC__
 |-
 | [[Gine-Bisau]] || [[Image:Coaguinea-bissau.jpg|120px|]]
 |-
-| [[Gine-Ekwatoliáli]] || [[Image:Equaarms22.PNG|120px|Equatorial Guinea COA]]
+| [[Gine-Ekwatoliáli]] || [[Image:Equatorial Guinea coa.png|120px|Equatorial Guinea COA]]
 |-
 | [[Guyana]] || [[Image:Guyana_coa.png|120px]]
 |}
