--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -85,7 +85,7 @@ __NOTOC__
 |-
 | [[Costa Rica]] || [[Image:CostaRica_coa.jpg|120px]]
 |-
-| [[Croatia]] || [[Image:Croatia_coat_small.png|120px]]
+| [[Croatia]] || [[Image:Croatian Coat of Arms.svg|120px]]
 |-
 | [[Cuba]] || [[Image:Cuba_coa.png|120px]]
 |-
