--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -493,7 +493,7 @@ __NOTOC__
 ==Z==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Zambia]] || [[Image:Zambian_Coat_of_Arms.png|120px|center]]
+|width=&quot;240&quot;| [[Zambia]] || [[Image:Coat_of_arms of Zambia.png|120px|center]]
 |-
  
 |}
