/* J */ coat of arms under new name on commons

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -202,7 +202,7 @@ __NOTOC__
 |-
 | [[Jersey]] || [[Image:Jersey Coat of Arms.png|120px|Jersey Coat of Arms]]
 |-
-| [[Jordan]] || [[Image:Hashemitearms.jpg|120px|Coat of Arms of Jordan]]
+| [[Jordan]] || [[Image:Coat of Jordan.png|120px|Coat of Arms of Jordan]]
 |}
 
 ==K==
