*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -45,7 +45,7 @@
 |-
 !colspan="2" bgcolor="orange" | Carte
 |-
-|colspan="2" align="center" | <center>[[image:Map_-_DR_Congo%2C_major_languages.png|299px|Karte von {{{NAME_ORT}}}]]</center>
+|colspan="2" align="center" | <center>[[image:Map_-_DR_Congo%2C_major_languages.svg|299px|Karte von {{{NAME_ORT}}}]]</center>
 |}
 
 <!--
