*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -1,7 +1,7 @@
 {{ndambo}}
 
 [[Image:Swahili-pn.jpg|thumb|Description]]
-[[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
+[[Image:Map_-_DR_Congo,_major_languages.svg|thumb|texte manquant pour exemple de langue.]]
 
 '''Kiswahili''' ezali [[lokótá]] na bato na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]], [[Kenya]], [[Burundi]], [[Rwanda]], [[Uganda]] mpé [[Tanzania]].
 
