--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -47,7 +47,7 @@
 |-
 |colspan="2" align="center" | <center>[[image:Map_-_DR_Congo%2C_major_languages.svg|299px|Karte von {{{NAME_ORT}}}]]</center>
 |}
-
+Ciluba ezali [[lokótá]] na bato na [[Kasaï]] na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]].
 <!--
 ==History==
 Probable history of the language. What language(s) it is derived from. Dates of movement of major groups of speakers, etc.
