--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -1,6 +1,8 @@
 {{9yanuari}}
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 
+Je suis trop contente de voir un document en lignala
+
 {{Lonkásá ya libosó/Mbɔ́tɛ}}
 {| cellspacing="6px"
 | width="75%" valign="top"|
