--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -487,7 +487,7 @@ __NOTOC__
 ==Y==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Yemen]] || [[Image:Yemencoa.jpg|120px]]
+|width=&quot;240&quot;| [[Yemen]] || [[Image:Coat of arms of Yemen.png|120px]]
 |}
 
 ==Z==
