*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -4,7 +4,7 @@
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-----
-| align="center" width="285px" | [[Image:Flag of Congo Kinshasa.svg|140px]][[Image:ArmsDRCbig.gif|140px]]|
+| align="center" width="285px" | [[Image:Flag of the Democratic Republic of the Congo.svg|140px]]|
 |-----
 | align="center" width="280px" | ([[Bɛndɛ́lɛ ya Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
 |}
@@ -228,7 +228,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 ''Ekakoli ya molayi : [[Politiki bya Kɔ́ngɔ-Kinshasa]]''
 
 '''Mobéko Likonzi''' :
-* {{fr}} [[fr:wikisource:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
+* {{fr}} [[:wikisource:fr:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
 
 '''Bakambi Ekolo''' :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
