--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -419,7 +419,7 @@ __NOTOC__
 |-
 | [[Swisi]] || [[Image:Switzerland_CoA.png|120px]]
 |-
-| [[Syria]] || [[Image:Syrlogo.jpg|120px]]
+| [[Syria]] || [[Image:Coat of arms of Syria.png|120px]]
 |}
 
 ==T==
