*Empty MediaWiki Message*

--- a/Kasai_ya_Monyɛlɛ.mw
+++ b/Kasai_ya_Monyɛlɛ.mw
@@ -5,6 +5,7 @@
 {{ndambo}}
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
+[[de:Kasai-Oriental (1966-2006)]]
 [[sv:Kasai-Oriental]]
 [[fr:Kasai-Oriental]]
 [[en:Kasai-Oriental]]
