*Empty MediaWiki Message*

--- a/Ekwatéli_(Kongó-Kinsásá).mw
+++ b/Ekwatéli_(Kongó-Kinsásá).mw
@@ -3,7 +3,7 @@
 
 {{ndambo}}
 
-[[de:Equateur]]
+[[de:Équateur (1966-2006)]]
 [[fr:Équateur (province)]]
 [[sv:Equateur]]
 [[en:Équateur, Congo|Equateur]]
