--- a/Kasai_ya_Monyɛlɛ.mw
+++ b/Kasai_ya_Monyɛlɛ.mw
@@ -1,6 +1,6 @@
 <div style="float:right">[[image:DCongoEastKasai.png]]</div>
 
-'''Kasai-Oriental''' ('''Kasai ya Este''') ezali etuka ya '''[[Kɔ́ngɔ-Kinshasa]]'''. Engumba-mokonzi na yanago ezali [[Mbuji-Mayi]].  Ekangami na Kasai ya Weste to mpe [[Kasai-Occidental]] na Weste, [[Ekwatéli (etuka)|Ekwatéli]] na Nor-Weste, [[Orientale]] na Nor-Este, [[Maniema]] na Este, mpe [[Katanga]] na Sud.
+'''Kasai-Oriental''' ('''Kasai ya Monyɛlɛ''' tǒ '''Kasai ya Este''') ezalí etúká ya '''[[Kɔ́ngɔ-Kinshasa]]'''. Engúmba-mokonzi na yangó ezalí [[Mbuji-Mayi]].  Ekangamí na Kasai ya Límbe tǒ mpé [[Kasai-Occidental]] na Weste, [[Ekwatéli (etúká)|Ekwatéli]] na Nor-Weste, [[Orientale]] na Nor-Este, [[Maniema]] na Este, mpé [[Katanga]] na Sudi.
 
 {{ndambo}}
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
