--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,15 +1,15 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''Republiki ya Kɔ́ngɔ Demokratiki<br/>(Kɔ́ngɔ-Kinshasa)</font><br/>République Democratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''
+|+ <font size="+1">'''Republiki ya Kɔ́ngɔ Demokratiki<br/>(Kɔ́ngɔ-Kinshasa)</font><br/>République Démocratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-----
-| align="center" width="285px" | [[Image:Flag of the Democratic Republic of the Congo.svg|140px]]|
+| align="center" width="285px" | [[Image:Flag of the Democratic Republic of the Congo.svg|140px]] [[Image:Armoiries de la République démocratique du Congo - 2006.png|140px]]
 |-----
 | align="center" width="280px" | ([[Bɛndɛ́lɛ ya Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
 |}
 |-----
-| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Demokrasi - Bosémbo - Bosangani''</font>
+| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Bosémbo, Bobóto, Mosálá''</font>
 |-----
 | align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
 |-----
