--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -47,7 +47,7 @@ __NOTOC__
 |-
 | [[Belize]] || [[Image:Belize_coa.png|120px]]
 |-
-| [[Bénin]] || [[Image:Benin.gif|120px]]
+| [[Bénin]] || [[Image:Coat of arms of Benin.png|120px]]
 |-
 | [[Bhutan]] || [[Image:Bhutan_emblem.png|120px]]
 |-
