--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -318,11 +318,11 @@ __NOTOC__
 ==O==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Omani]] || [[Image:Khanjar.gif|120px]]
+|width=&quot;240&quot;| [[Omani]] || [[Image:Sin escudo.png|120px]]
 |-
-| [[Ostralía]] || [[Image:Aust Coat of Arms (large).jpg|120px]]
+| [[Ostralía]] || [[Image:Sin escudo.png|120px]]
 |-
-| [[Otrishi]] || [[Image:Austria coat of arms.png|120px]]
+| [[Otrishi]] || [[Image:Sin escudo.png|120px]]
 |-
 
 |}
