/* Mpona kokóma «ekolo moyindo molakisa nzela» */

--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -24,7 +24,7 @@ Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele 
 == Mpona kokóma «ekolo moyindo molakisa nzela» ==
 Ekambi miyindo na mindele ekopesa ndakisa, ebongi esala mabe te. Elingaki bokondzi ya botata esimbi Bruxelles mpona bokambi ya miyindo ezala malamu, ekolo emikoka bozwi bwa ye. Kasi etiki na miyindo, manso etali mbulamatari te lokola botei bana ba kelasi, botongi ekolo mpe mosala ya monganga. 
 
-Bokambi yango ezalaki mpe na makambo ya makasi. Ata mibeko mikokumbisa bikolo ya miyindo miye ekambi ekolo '''[[Kɔ́ngɔ ya Belgica]]''', mosala ya bokasi ekosila kaka na mobu koto na kama libwa na tuku misato. Bakopesa bonyile na bapanzi makita mpe na bisanga bya bato kaka na mobu koto na kama libwa na tuku mitano na libwa. Na mibu koto na kama libwa na tuku mitano, posa ya kotombola ekolo ekopesa makanisi ya ekolo Kongo ndakisa malamu. Na tema ya mabe te, bisika bya ekolo Kongo na emoneli ya mokili mobimba ya mobu koto na kama libwa na tuku mitano na mwambe, epesaki maloba ya elikya enene.
+Bokambi yango ezalaki mpe na makambo ya makasi. Ata mibeko mikokumbisa bikolo ya miyindo miye ekambi ekolo '''[[Kongo belji|Kɔ́ngɔ ya Belgica]]''', mosala ya bokasi ekosila kaka na mobu koto na kama libwa na tuku misato. Bakopesa bonyile na bapanzi makita mpe na bisanga bya bato kaka na mobu koto na kama libwa na tuku mitano na libwa. Na mibu koto na kama libwa na tuku mitano, posa ya kotombola ekolo ekopesa makanisi ya ekolo Kongo ndakisa malamu. Na tema ya mabe te, bisika bya ekolo Kongo na emoneli ya mokili mobimba ya mobu koto na kama libwa na tuku mitano na mwambe, epesaki maloba ya elikya enene.
 
 == Bisika bya bato na mbulamatari ==
 Na kati ya ekolo, '''bisika bya bato na mbulamatari''' ekambamaki na ''gouverneur général'' moye akambi mbulamatari mpe akoyebisa manso epai ya ntoma ya bikolo miyindo na minoko ya bakambi mabele. Bango bakotala misala minso ya léta (bofuti pako, misala ya mabele, misala ya botongi ekolo, bobwaki bosoto, bokati makambo, etc). Misala miina ekambami mpe na bakondzi ya miyindo oyo balatisi palata. 
