--- a/Lisapo_lya_Kongó-Kinsásá.mw
+++ b/Lisapo_lya_Kongó-Kinsásá.mw
@@ -1,2 +1,5 @@
 [[Image:Mapcongo1914.jpg|thumb|Kongo belji (1914)]]
 [[Image:Mapcongo1914-2.jpg|thumb|Kongo belji (1914)]]
+
+
+[[Category:Kɔ́ngɔ-Kinshasa]]
