*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -498,7 +498,7 @@ __NOTOC__
  
 |}
 
-[[Category:Ba almwali ya bisé|*]]
+[[Category:Almwali]]
 
 [[en:List of national coats of arms]]
 [[it:Elenco di stemmi nazionali]]
