*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -226,7 +226,7 @@ __NOTOC__
 |-
 | [[Kɔ́ngɔ-Brazzaville]] || [[Image:Congocofarms2.PNG|120px]]
 |-
-| [[Kɔ́ngɔ-Kinshasa]] || [[Image:ArmsDRCbig.gif|120px]]
+| [[Kɔ́ngɔ-Kinshasa]] || [[Image:Armoiries de la République démocratique du Congo - 2006.png|120px]]
 |-
 | [[Kotdivuar]] || [[Image:Coa cote d ivory.jpg||120px]]
 |-
