--- a/Bilembo-nkita_bya_Kongó-Kinsásá.mw
+++ b/Bilembo-nkita_bya_Kongó-Kinsásá.mw
@@ -1,4 +1,7 @@
-[[Image:Armoiries de la République démocratique du Congo - 2003.svg|thumb|Almwali ya Kɔ́ngɔ Demokratiki]]
+[[Image:Armoiries de la République démocratique du Congo - 2006.png|thumb|Almwali ya Kɔ́ngɔ Demokratiki ya 2006]]
+[[Image:Armoiries de la République démocratique du Congo - 2003.svg|thumb|Almwali ya Kɔ́ngɔ Demokratiki 2003 - 2006]]
+
+
 
 
 [[Category:Kɔ́ngɔ-Kinshasa]]
