/* Tozali boni o kati ya lingomba? */

--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -18,13 +18,22 @@ Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo 
 Lingomba ya Mission likabwani na ba 45 Provinces ntuku inei na itano, na 3 Vice-provinces isato. O molongo mobimba, lingomba lizali kosala na bikolo ntuku mwambi,bikabwani o bituka to continent inso: [[Afrika]], [[Amerika]], [[Autralie]], [[Asia]] (kin'o [[Chine]]) mpe [[Eropa]].
 
 == Tozali boni o kati ya lingomba? ==
- O mobu 1998, lingomba ya Mission lizalaki na ba membre 4193. O kati ya bango.
+O mobu 1998, lingomba ya Mission lizalaki na ba membre 4193. O kati ya bango.
 
- Baepiskopo bazali                                    29
- Banganga-Nzambe                                    3191
- Ba mofulele                                         203
- Ba diakono na bai-likindo basali séminaire interne  770
- 
+{|
+|Baepiskopo bazali
+|29
+|-
+|Banganga-Nzambe
+|3191
+|-
+|Ba mofulele
+|203
+|-
+|Ba diakono na bai-likindo basali séminaire interne
+|770
+|}
+
 O mibu miye, motango mwa baye bazali kokota na lingomba o bikolo bya Europa mozali moke mpenza. Kasi o bikolo bya Afrika na Amerika ya nse, motango mona mokoli mingi mpenza.
 
 == Misala mya lingomba ut'o kala ==
