/* Provincce ya Kɔ́ngɔ-Beljika */

--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -66,7 +66,7 @@ Na 1929 bafungoli ndako ya [[Leuven]] mpe 1952 eye ya [[Lessines]]. O mobu 1947,
 
 O mobu 1991, na botalaka 'te ba Lazariste bazali lisusu mingi te o Beljika mpe awa motango mwa bango mokomi kokola o ekolo [[Kongo|Kɔ́ngɔ]], Bakonzi ba lingomba bazwi mokano mwa bokomisi Kongo Province mpe bobongoli Beljika bo Etuka to Région autonome o kati ya Province ya Kɔ́ngɔ. Ezali na ndimbola enene 'te o bobange bwa ye, province-mama ekoka kokoma o maboko ma mwana oyo ye akolisi na motema monso.
 
-=== I. Province ya Kɔ́ngɔ ===
+=== Province ya Kɔ́ngɔ ===
 Province ya Kongo ebandisami na ba Lazariste ya Beljika. Sango [[Félix Dekempeneer]], mobandisi wa mission ya Bikoro, akomi o Kongo o mobu 1925, mpo ya kolengele boyei bwa ba nyango ba ''Filles de la Charité''. Mpe wana bamopesi mosala mwa bosangeli Nsango Elamu o etuka ya Bikoro. O ntango ena, mission ya Bikoro ezalaki na batu soko nkoto ntuku ibale, mpe mbele bakristu bobele nkoto yoko na ndambo to nkoto ibale. O mobu 1959, mission ya Bikoro ekomi Diocesi mpe Mgr [[Camille Vandekerkove]], lazariste, akomaki [[Episkopo]] wa yambo ya Diocesi ena. Basango Lazaristes babandisi ba [[paroisse]] iye: Bikoro St. Vincent wa Paul (1926), [[Irebu]] Notre Dame du Chenal (1928), [[Lukolela]] Sacré-Coeur (1933), [[Bokongo]] Sainte Famille (1936), [[Yumbi]] Christ-Roi (1938), [[Bolobo Notre Dame (1946), [[Itipo]] Saint Joseph (1948), [[Iboko]] Notre Dame de la Médaille Miraculeuse (1956), [[Mooto]] Saint Emille (1962), mpe [[Momboyo]] Martyrs d'ouganda (1963).
 
 Ut'o mobu 1975, nsima ya liwa lya Mgr Camille, diocesi ya Bikoro esangani na eye ya [[Mbandaka]]. Nkombo ya diocèse ekomi Archidiocèse de Mbandaka-Bikoro. Liboso o bokambemi bwa Mgr [[Pierre Wijnants]], wa lingomba lya ba Missionnaire du Sacré-Coeur, na nsima o bokambemi bwa Mgr [[Frédéric Etsou]], oyo akomi lelo Cardinal mpe Episkopo wa lokumu wa [[Kinshasa]]. Lelo, Archidiocèse ya Mbandaka-Bikoro ezali o maboko ma Mgr [[Joseph Nkumuondala]].
@@ -92,20 +92,20 @@ Lokola bazali o libota linene lya Santu Vincent, ba Lazariste bazali kosala mans
 
 Mosala mwa bango o kati ya ba Laïc baye bazali kolanda mpe ndakisa ya Santu Vincent mozali komonana mingi mpenza na nzela ya lingomba to "Association de la Médaille Miraculeuse", eye euti kobanda awa na Congo, na nzela ya Société de Saint Vincent de Paul, Jeunesse Mariale Vincentienne, na mpe masanga masusu malandi mosantu Vincent.
 
-=== II. Région ya Beljika ===
-==== 1. Leuven ====
+=== Région ya Beljika ===
+==== Leuven ====
 Ndako ya Leuven ekosalaka mosala mwa "procure" mpo ya Province ya Kɔ́ngɔ : Bosombi mpe botindi biloko mpo ya ba Lazariste bazali o Kongo. Ndako ya boyambi ba Lazaristes baye bayei kopemisa nzoto (bazali na congé) to mpe baye bazali kobela. Ndako ya bopemi mpo ya bandeko baye bakomi mibange to baye bazali kobela.
 
 Ba Lazariste baye bavandi o ndako ya Leuven bazali mpe kosala misala na lopitalo (lokola aumônier to lokola volontaire), bakotalaka batu baye bazali na mikakatano, bakosanganaka na mangomba ya losambo (groupes de prière) mpe bakosalisaka ba Filles de la Charité baye bakolobaka flamand.
 
-==== 2. Lessines ====
+==== Lessines ====
 Ndako-Nzambe ya Lessines esalemi na bokundoli bomilakisi bwa Ngondo Mosantu Maria na rue du Bac (Paris). Mokolo mwa yambo mwa poso inso, lisanga Association de la Médaille Miraculeuse likosambelaka losambo la novena (na 20h ). Tokoyambaka mpe bakristu balingi koleka o sanctuaire (ba pèlerin), ezala moto moko moko to mpe lisanga.
 
 Poso nyonso ya nsuka ya sanza ya mitano, tosalaka losambo lonene la novena o bokambemi bwa nganga-Nzambe moko auti epai esusu mpo ya kolendisa bana ba Mama Maria. Bokutani bona bwa losambo bokosangisaka bandeko banso ba Belgique baye bamesani koya epai ya Mama.
 
 Lokasa to revue mensuelle moko (2000 exemplaires) lozali kosangisa bayebani ba biso banso. Ndako-Nzambe ya biso esalaka mpe misala minso mikosalemaka o paroisse. Moko wa ba nganga-Nzambe ba sanctuaire azali na kati ya baye bakoteyaka o ba paroisse ya doyenné ya Lessines.
 
-==== 3. Liège ====
+==== Liège ====
 Maison "ad instar domus" Ba Lazariste ba Liège bavandi esika yoko te, kasi bazali motema moko na mosala : Na bosalisi banyango ba Filles de la Charité, mangomba ma bilenge mpe na boteyi bakristu na ba ndako. Na bosalisi baye bayei lipaya na Belgique (immigrés) na mpe baye bakimi bitumba na mobulu o mboka ya bango (réfugiés). Tozali kosalisa bango na biloko, kobunda mpo ya makoki mpe bomoto ya bango.
 
 {| class="WSerieV" id="WSerie_Christianisme" tableborder="1" cellspacing="0" style="padding: 0.3em; float:right; clear: right; margin: 0 0 5px 1em; border:1px solid #669966; border-right-width: 2px; border-bottom-width: 2px; background:#BBCCCC; text-align:center;"
