--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -132,11 +132,11 @@ La [[Charte européenne des langues régionales ou minoritaires]] reconnaît le 
 *An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh ([[cornique]])
 *Unitit Kinrick o Great Breetain an Northren Ireland ([[scots]])
 
-== Voir aussi ==
+== Tála mpé ==
 {{commons|Category:United Kingdom|le Royaume-Uni}}
 {{wikitravel|les Royaume-Uni|Royaume-Uni}}
 
-=== [[Wikipédia:Liens externes|Liens externes]] ===
+=== Nkásá o libándá ===
 * {{en}} [http://www.ukonline.gov.uk/ Portail de l'administration britannique]
 * {{en}} [http://www.parliament.uk Parlement du Royaume-Uni]
 * {{fr}} [http://fr.jurispedia.org/index.php/Royaume-Uni_de_Grande-Bretagne_et_d%27Irlande_du_Nord Le droit du Royaume-Uni de Grande-Bretagne et d'Irlande du Nord (Jurispedia)]
