*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -62,7 +62,7 @@ footnotes = <sup>1</sup>In the UK, [[Nkotá ya Ingɛlɛ́tɛlɛ|some other langu
 
 {{UK}}
 
-== Géographie ==
+== Jyografi ==
 
 == Économie ==
 
