*Empty MediaWiki Message*

--- a/Ingɛlandi.mw
+++ b/Ingɛlandi.mw
@@ -1,4 +1,62 @@
 {{ndámbo}}
+
+{{Infobox Esé|
+nkómbó_na_lokóta = England |
+nkómbó = Ingɛlɛ́tɛlɛ |
+image_flag = Flag_of_England.svg|170px|
+image_coat = England.gif|100px|
+image_map = Map of England within the United Kingdom.png |
+mokáno = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzámbe ndé likoki na ngáí)''<sup>2</sup></small> |
+loyémbo = [[God Save the Queen]]<sup>3</sup> |
+nkótá_ya_lɛ́ta = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛ́sa]] ''[[de facto]]'' <sup>4</sup> |
+mbóka-mokonzi = [[Londoni]] |
+latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
+engúmba_monɛ́nɛ = [[Londoni]] |
+government_type = [[Constitutional monarchy]] |
+leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
+leader_names =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
+area_rank = nn |
+area_magnitude = 1 E11 |
+area = 130.395 |
+percent_water = nn |
+population_estimate_year = nn |
+population_census = 49.138.831 |
+population_census_year = 2001 |
+population_density = 377 |
+population_density_rank = nn |
+GDP_PPP_year = 2005 |
+GDP_PPP = $1,825,837 million |
+GDP_PPP_rank = UK |
+GDP_PPP_per_capita = $30,658 |
+GDP_PPP_per_capita_rank = UK |
+sovereignty_type = [[Act of Union 1800|Establishment]] |
+established_events = nn |
+established_dates = 1801<sup>5</sup>|
+mosɔlɔ = [[Pound Sterling|British pound]] (&pound;) |
+currency_code =  GBP |
+ngonga = [[GMT]] |
+utc_offset = +0 |
+ngonga_DST = [[British Summer Time|BST]] |
+utc_offset_DST = +1 |
+cctld= [[.uk]]<sup>7</sup> |
+calling_code = 44 |
+footnotes = <sup>1</sup>In the UK, [[Nkotá ya Ingɛlɛ́tɛlɛ|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
+*<small>[[Cornish language|Cornish]]: ''An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh''
+<small><sup>3</sup> Unofficial.<br><sup>4</sup> Officially recognised regional languages:
+<br><sup>6</sup> Official estimate provided by the UK [[Office for National Statistics]]. As of April 2005, the July 2004 estimates were not yet available.<br><sup>7</sup> [[ISO 3166-1]] is [[Great Britain|GB]], but [[.gb]] is unused}}
+
+== Historia ==
+== Politiki ==
+== Subdivisions ==
+== Jyografi ==
+== Économie ==
+== Démographie ==
+== Culture ==
+== Tála mpé ==
+== Nkásá o libándá ==
+
+
+
 {{UK}}
 
 [[af:Engeland]]
