--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -1,11 +1,28 @@
-[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|[[Image:FIAV_63.png]] Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa]]
-[[Image:Flag of Congo Free State.svg|right|thumb|188px|Bɛndɛ́lɛ na ntángo ya banɔ́kɔ́ (1877-1960)]]
-[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|1960-1963]]
-[[Image:Flag of Congo Kinshasa 1963.svg|right|thumb|188px|1963-1966]]
-[[Image:Flag of Congo Kinshasa 1966.svg|right|thumb|188px|1966-1971]]
-[[Image:Flag of Zaire.svg|right|thumb|188px|Bɛndɛ́lɛ na [[Zaire]] (1971-1997)]]
+[[Image:Flag_of_the_Democratic_Republic_of_the_Congo.svg|right|thumb|188px|Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa|Republiki ya Kɔ́ngɔ Demokratiki]]; 18 febuari 2006 –]]
+===1997 – 2006===
+[[Image:Flag of Congo Kinshasa 1997.svg|right|thumb|188px|Bɛndɛ́lɛ na Republiki ya Kɔ́ngɔ Demokratiki; 17 mai 1997 – 18 febuari 2006]]
+'''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[2003]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]]. 
 
-'''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[2003]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]].  Originally the stars on the left represented the six [[provinces of the Democratic Republic of Congo]], but this is no longer appropriate.  This flag was based on the old colonial flag, which omitted the stars to the left.
+===1971 – 1997===
+[[Image:Flag of Zaire.svg|right|thumb|188px|Bɛndɛ́lɛ na [[Zaire]]; 21 novɛmbɛ 1971 tee 17 mai1997)]]
+
+===1966 – 1971===
+[[Image:Flag of Congo Kinshasa 1966.svg|right|thumb|188px|Bɛndɛ́lɛ na Kɔ́ngɔ-Kisásá; 1966 tee 21 novɛmbɛ 1971]]
+
+===1963 – 1966===
+[[Image:Flag of Congo Kinshasa 1963.svg|right|thumb|188px|Bɛndɛ́lɛ na Kɔ́ngɔ-Léopoldville;a yúli 1963 tee 1966]]
+
+===1963 – 1966===
+[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|Bɛndɛ́lɛ na Republiki ya Kɔ́ngɔ; 1 yúli 1960 tee 1 yúli 1963]]
+
+===1877 – 1960===
+[[Image:Flag of Congo Free State.svg|right|thumb|188px|Bɛndɛ́lɛ na ntángo ya banɔ́kɔ́; 21 yúni 1877 tee 30 yúni 1960]]
+
+== Tála mpé ==
+* [[Almwali_ya_Kɔ́ngɔ-Kinshasa|Almwali ya Kɔ́ngɔ]]
+
+== Nkásá o libándá ==
+[http://www.flaggenlexikon.de/fkongoki.htm#Bedeutung] Historia ya bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa (lialémani / lingɛlɛ́sa) ''(If you can: please translate to this page. — Wennn du kannst: Bitte übersetze für diese Seite.)''
 
 {{nationalflags}}<!-- to edit this table, go to [[Template:Nationalflags]] -->
 
