*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_Kongó-Kinsásá.mw
+++ b/Bilembo-nkita_bya_Kongó-Kinsásá.mw
@@ -1,8 +1,21 @@
 [[Image:Armoiries de la République démocratique du Congo - 2006.png|thumb|Almwali ya Kɔ́ngɔ Demokratiki ya 2006]]
-[[Image:Armoiries de la République démocratique du Congo - 2003.svg|thumb|Almwali ya Kɔ́ngɔ Demokratiki 2003 - 2006]]
 
+<gallery>
+Image:Zaire-Arm-1971-1997.png|Almwali ya [[Zaire ]] 1971 tee 1997)
+Image:Congo dem coa 1999.png|Almwali (1997 tee 2003)
+Image:Armoiries de la République démocratique du Congo - 2003.svg|Almwali (2003 tee 2006)
+</gallery>
 
+==Tála mpé==
+* [[Bɛndɛ́lɛ ya Kɔ́ngɔ-Kinshasa]]
 
+==Nkásá o libándá==
+[http://www.flaggenlexikon.de/fkongoki.htm#Ursprung_des_Wappens] Historia ya Almwali ya Kɔ́ngɔ (lialémani / lingɛlɛ́sa) ''(If you can: please translate to this page. — Wennn du kannst: Bitte übersetze für diese Seite.)''
 
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Almwali]]
+
+[[de:Wappen der Demokratischen Republik Kongo]]
+[[en:Coat of arms of the Democratic Republic of the Congo]]
+[[es:Escudo de la República Democrática del Congo]]
+[[he:סמל הרפובליקה הדמוקרטית של קונגו]]
