*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_Kongó-Kinsásá.mw
+++ b/Bilembo-nkita_bya_Kongó-Kinsásá.mw
@@ -1,5 +1,7 @@
 [[Image:Armoiries de la République démocratique du Congo - 2006.png|thumb|Almwali ya Kɔ́ngɔ Demokratiki ya 2006]]
+'''Almwali ya Kɔ́ngɔ-Kinshasa''' na 2006.
 
+===Historia===
 <gallery>
 Image:Zaire-Arm-1971-1997.png|Almwali ya [[Zaire ]] 1971 tee 1997)
 Image:Congo dem coa 1999.png|Almwali (1997 tee 2003)
