/* TB bakoki kopekisa na mobateli <vaccination>? */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -92,7 +92,7 @@ koyeba TB'.
 == TB mabe na yango penza nini? == 
 Soki babikisi te, TB, ata epayi ya bakolo, emataka malembe kino eyi koboma. Mabe mosusu ekopesa meningite. Nzela mosusu, soki babikisi te, nde kobimisa makila tango ya kokolola. TB ekokoma ndongo soki emeseni nkisi, mpo ndenge ya kobikisa ezalaka makasi. Nakati ya [[Ingɛlɛ́tɛlɛ]], TB, ebomaka bato 350 na mbula moko, mingi nakati ya bango mibange, kasi bana mpe bazalaka. Bisika bato bavandaka na bandako oyo ekoki te, na mokili mobimba, bato mingi bakufaka na TB koleka oyo ya UK.
 
-== TB bakoki kopekisa na mobateli <vaccination>? ==
+== TB bakoki kopekisa na mobateli ''vaccination''? ==
 Mobateli ezali ya BCG. Tango mosusu epekisaka TB te. Kasi esalisaka mpona bana baoyo bazali kobela meningite 'TB meningitis' (Rodrigues et al., 1993).
 Nakati ya Ingɛlɛ́tɛlɛ, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi lokola ndenge ya TB ebaluki, UK ekamati nzela ya kolanda bato moke baoyo bakozala na yango. Mobateli ya BCG ekeseni kolanda epayi okozala na UK, mpo TB ekozala mingi esika moko kasi ezali te esika mosusu. BCG bapesaka bana oyo bavandaka bisika ezalaka na bato mingi ya TB koleka bisika misusu, likolo ya oyo, bapesaka na bana babotami na mboka oyo ezali na bato mingi ya TB. Bapesaka mpe na bana kelasi ya mbula 10 kino 14 soki bazui BCG na kala te.
 
