--- a/Fɛ́fɛlɛ.mw
+++ b/Fɛ́fɛlɛ.mw
@@ -1,2 +1,23 @@
 {{ndámbo}}
+
+
+
+
+
 [[Category:Maladi]]
+
+[[da:Feber]]
+[[de:Fieber]]
+[[en:Fever]]
+[[es:Fiebre]]
+[[eu:Sukar]]
+[[he:חום (תסמין למחלה)]]
+[[io:Febro]]
+[[it:Febbre]]
+[[ms:Demam]]
+[[nl:Koorts]]
+[[nn:Feber]]
+[[no:Feber]]
+[[pl:Gorączka]]
+[[pt:Febre]]
+[[sv:Feber]]
