/* Tuberculose emonanaka ndenge nini? */ Fɛ́fɛlɛ

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -35,7 +35,7 @@ azali na yango. Malamu omona dokotolo soki mwana na yo to ndeko alakisaka biloko
 tokomi na nse:
 
 * [[Kokolola]] mpona koleka mposo misatu
-* [[Fievre]]
+* [[Fɛ́fɛlɛ]]
 * Kotoko na mbutu
 * [[Kokondo]]
 * Kolemba nzoto noki
