/* Nzela nini ya koyeba Tuberculose? */ Fɛ́fɛlɛ

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -62,7 +62,7 @@ TB oyo eyebani mingi nde ya kokolola 'pulmonary TB'. Moto oyo azali na yango ako
 * kokolola oyo emataka makasi sima ya mposo mine na koleka to basenza
 * kobimisa soyi mingi; akoki mpe kokolola makila soki nzela ya makila epasuki
 * komiyoka nzoto elembi tango nyonso
-* kozala na fievre, mbala mingi na mbutu, oyo epesi kotoko mingi
+* kozala na fɛ́fɛlɛ, mbala mingi na mbutu, oyo epesi kotoko mingi
 
 == TB epanzaka ndenge nini? ==
 Nzela ya kopanza TB yango kaka moko: baye bazali na yango nakati ya tolo to na mongongo. Mayi oyo ebimaka na monoko na kokolola nakati ya mopepe nde ezali na maladie. Kasi oyeba te tango mosusu baoyo bazali na yango bakoki te kopanza yango.
