/* Mpona nini mwana na ngai azua mobateli ya BCG te? */ Fɛ́fɛlɛ

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -18,7 +18,7 @@ sparadrap te. Pota yango ekoki kosala mwa sanza mpo ebanda kobika  '''Soki epesi
 
 == Mpona nini mwana na ngai azua mobateli ya BCG te? ==
 Lokola na mibateli nyonso, tango mususu ebongi te kopesa mwana BCG. Tina yango oyo:
-* Soki mwana azali na nzoto ya moto ([[fievre]])
+* Soki mwana azali na nzoto ya moto ([[fɛ́fɛlɛ]])
 * Soki bazali kopesa ye nkisi ya [[kansele]] to nkisi nyonso oyo esukisaka makasi ya nzoto
 * Azali na [[Sida]], to
 * Azali kobela bisika mingi na loposo [[eczema]].
