--- a/Língoló.mw
+++ b/Língoló.mw
@@ -19,7 +19,17 @@
 
 
 
-
-
-
 [[Category:Mbuma]]
+
+[[en:Mango]] 
+[[da:Mango]]
+[[de:Mango]]
+[[es:Mango]]
+[[eo:Mangujo]]
+[[ms:Mangga]]
+[[nl:Mango (vrucht)]]
+[[ja:マンゴー]]
+[[no:Mango]]
+[[pt:Manga (fruta)]]
+[[fi:Mango]]
+[[sv:Mango]]
