*Empty MediaWiki Message*

--- a/Lingɛlɛ́sa.mw
+++ b/Lingɛlɛ́sa.mw
@@ -1,6 +1,9 @@
-[[category:Lokótá]]
+'''Lingɛlɛ́sa''' ezalí [[lokótá]] ya bato ba [[Ingɛlɛ́tɛlɛ]] mpé ba [[Lisanga ya Amerika]]. Lingɛlɛ́sa ezalí [[lokóta ya Leta]] ba Kenya mpe ba Uganda.
+
 
 {{ndambo}}
+
+[[category:Lokótá]]
 
 {{InterWiki|code=en}}
 
