*Empty MediaWiki Message*

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -1,9 +1,12 @@
 [[Category:Maladi]]
 
-'''Mobateli ya BCG''' ([[Bacillus Calmette-Guérin]]) ezali na biloko oyo epesaka maladi ya [[tuberculose]] (TB) kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
+'''Bacillus Calmette-Guérin''' (BCG) na mwana nayo. Buku oyo ezali likolo ya nkisi ya Bacillus Calmette-Guérin, mobateli bapesaka mpo mwana nayo azua [[tuberculose]] (TB) te.
+
+
+'''Mobateli ya Bacillus Calmette-Guérin''' ezali na biloko oyo epesaka maladi ya [[tuberculose]] (TB) kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
 
 == Mpona nini mwana na ngai bapesa ye Bacillus Calmette-Guérin? ==
-Na [[Ingɛlɛ́tɛlɛ]], lokola na bamboka misusu, BCG ([[Bacillus Calmette-Guérin]]) bapesaka na bana baye bazali mpene ya bato oyo bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB, ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi bakopesaka mpe na tango nyonso oyo ebongi.
+Na [[Ingɛlɛ́tɛlɛ]], lokola na bamboka misusu, BCG (Bacillus Calmette-Guérin) bapesaka na bana baye bazali mpene ya bato oyo bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB, ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi bakopesaka mpe na tango nyonso oyo ebongi.
 
 [[Image:Flu Vaccine.jpg|thumb|right|Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.]]
 
@@ -57,3 +60,13 @@ te, okokiko betela:
 * dokotolo nayo
 * midwife / femme sage (THIS IS ENGLISH/FRENCH, PLEASE TRANSLATE IF YOU CAN)
 * nurse / infirmière (THIS IS ENGLISH/FRENCH, PLEASE TRANSLATE IF YOU CAN)
+
+
+[[de:Bacillus Calmette-Guérin]]
+[[es:BCG]]
+[[fr:Bacille de Calmette et Guérin]]
+[[nl:BCG-vaccin]]
+[[ja:BCG]]
+[[pl:BCG]]
+[[fi:BCG-rokote]]
+[[zh:卡介苗]]
