/* Mpona nini, moto liboso ya kopesa ye BCG, ebongi bameka loposo naye? */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -105,7 +105,7 @@ Soki azuaki BCG kala te esengi moto azua yango soki alingi kotambola, kovanda to
 BCG batiyaka yango na tonga ya moke na loposo.
 
 == Mpona nini, moto liboso ya kopesa ye BCG, ebongi bameka loposo naye? ==
-Moto nyonso oyo azali na sanza 12 to koleka wana, bakomekaka loposo naye liboso ya kopesa ye [[mobateli ya BCG]]. Wana ezali mpona koyeba soki mobateli ya nzoto (immunite) emeseni na TB. Nzela ya koyeba nde kobeta tonga ya [[tuberculin]] – mayi ya proteine basali wuta na 'M. tuberculosis' – na kati ya loposo. Sima ya mikolo 2 - 10, na ndenge ya tonga yango, bakotala esika babeti yango.
+Moto nyonso oyo azali na sanza 12 to koleka wana, bakomekaka loposo naye liboso ya kopesa ye [[Bacillus Calmette-Guérin|mobateli ya BCG]]. Wana ezali mpona koyeba soki mobateli ya nzoto (immunite) emeseni na TB. Nzela ya koyeba nde kobeta tonga ya [[tuberculin]] – mayi ya proteine basali wuta na 'M. tuberculosis' – na kati ya loposo. Sima ya mikolo 2 - 10, na ndenge ya tonga yango, bakotala esika babeti yango.
 Soki esika babeti tonga evimbi mpe, ekomi lokola makila, wana elakisi te maladie ezali. Ndenge wana ebongi lisusu te bapesa moto BCG, mpo akozala asiazui TB to maladie mosusu ya ndenge wana. Soki nzoto naye elakisi kozala na maladie ya makasi, wana esengi bameka ye na nzela misusu koyeba soki penza asiazui to abandi kobela TB. Bana oyo bakokisi naino sanza 12 te, bango bazali na posa te ya komeka loposo, liboso ya kozua BCG.
 
 == Tuberculose babikisaka yango ndenge nini? ==
