--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -2,7 +2,7 @@
 [[Category:Móngana]]
 [[Category:Nzoto kolongono]]
 
-'''Tuberculose (TB)''' ezalí maladie óyo ebébisaka esíká ya kopomola na káti ya tolo, kasi ekokí mpé kobébisa bisíka misúsu na nzóto. Na bambula 150 óyo eleki na  [[Ingɛlɛ́tɛlɛ]], moto moko na kati ya bato 8 óyo bazalaki kokufa ezalaki mpo ya TB. Kasi na bambula ya 1980, maladie yango emonanaki mingi lisusu te, mpoya bato kozala na ndako ya malamu, koliya malamu mpe koyeba noki na kotiya pembeni baye bazali kobela mpo bazua lobiko noki. Kasi TB esili naino libela te. Ya soolo, TB ezali maladie enyokoloko mingi mokili mikolo oyo. Mbula oyo eleki batu mingi bakufaki na TB-8,000 na mokolo moko- koleka na bambula nyonso oyo esieleki. Na bambula 20 oyo eleki, TB ebandi komata malembemalembe na UK. Sikoyo bato 7,000 bazuaka yango na mbula moko – wana koloba moto moko na kati ya bato 10,000 na mboka mobimba.
+'''Tuberculose (TB)''' ezalí maladie óyo ebébisaka esíká ya kopomola na káti ya tolo, kasi ekokí mpé kobébisa bisíka misúsu na nzóto. Na bambula 150 óyo eleki na  [[Ingɛlɛ́tɛlɛ]], moto moko na kati ya bato 8 óyo bazalaki kokufa ezalaki mpo ya TB. Kasi na bambula ya 1980, maladie yango emonanaki mingi lisusu te, mpoya bato kozala na ndako ya malamu, koliya malamu mpe koyeba noki na kotiya pembeni baye bazali kobela mpo bazua lobiko noki. Kasi TB esili naino libela te. Ya soolo, TB ezali maladie enyokoloko mingi mokili mikolo oyo. Mbula oyo eleki batu mingi bakufaki na TB-8,000 na mokolo moko- koleka na bambula nyonso oyo esieleki. Na bambula 20 oyo eleki, TB ebandi komata malembemalembe na Ingɛlɛ́tɛlɛ. Sikoyo bato 7,000 bazuaka yango na mbula moko – wana koloba moto moko na kati ya bato 10,000 na mboka mobimba.
 
 Buku oyo eyebisaka likolo ya maladie yango, ndenge ya koyeba yango, lobiko na yango, mpe elakisaka ndenge ezali na mboka na biso na kokokisa yango na ndenge ezalaka na mokili mobimba. Buku oyo mpe ezui batoli ya sika mpoya mopekisi ya BCG na UK, mpe babuku misusu na sango oyo nyonso ekosalisa koyeba makambo ya maladi yango na bawebsite.
 
@@ -42,7 +42,7 @@ tokomi na nse:
 * Kokolola [[makila]]
 
 == Mpona nini mwana na ngai bapesa ye Bacillus Calmette-Guérin? ==
-Na Ingɛlɛ́tɛlɛ, lokola na bamboka misusu, [[Mobateli ya BCG|BCG]] ([[Bacillus Calmette-Guérin]]) bapesaka na bana baye bazali mpene ya bato oyo
+Na Ingɛlɛ́tɛlɛ, lokola na bamboka misusu, Bacillus Calmette-Guérin bapesaka na bana baye bazali mpene ya bato oyo
 bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB,
 ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana
 oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi
@@ -50,7 +50,7 @@ bakopesaka mpe na tango nyonso oyo ebongi.
 
 == Bamboka oyo ezalaka na babeli mingi ya Tuberculose ==
 [[Image:Flu Vaccine.jpg|thumb|right|Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.]]
-Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mituni na biso ezali 'oui' 'íyo', sala noki opesa mwana nayo azua [[Mobateli ya BCG|BCG]] soki azui naino te.
+Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mituni na biso ezali 'oui' 'íyo', sala noki opesa mwana nayo azua [[Bacillus Calmette-Guérin]] soki azui naino te.
 * Yo, bandeko nayo to tata ya mwana na yo awuti na mboka moko nakati ya oyo totangi na nse?
 * Yo na mwana nayo bokokende kovanda koleka sanza moko to bokotambola mingi na mboka nakati ya oyo totangi na nse?
 * Nakati ya ndako nayo, to mpene nayo, azali moto oyo akozala mpene na mwana nayo na tango mingi, oyo azali na TB to azalaki na yango kala, to awuti na mboka moko nakati ya oyo to tangi?
@@ -94,7 +94,7 @@ Soki babikisi te, TB, ata epayi ya bakolo, emataka malembe kino eyi koboma. Mabe
 
 == TB bakoki kopekisa na mobateli ''vaccination''? ==
 Mobateli ezali ya BCG. Tango mosusu epekisaka TB te. Kasi esalisaka mpona bana baoyo bazali kobela meningite 'TB meningitis' (Rodrigues et al., 1993).
-Nakati ya Ingɛlɛ́tɛlɛ, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi lokola ndenge ya TB ebaluki, UK ekamati nzela ya kolanda bato moke baoyo bakozala na yango. Mobateli ya BCG ekeseni kolanda epayi okozala na UK, mpo TB ekozala mingi esika moko kasi ezali te esika mosusu. BCG bapesaka bana oyo bavandaka bisika ezalaka na bato mingi ya TB koleka bisika misusu, likolo ya oyo, bapesaka na bana babotami na mboka oyo ezali na bato mingi ya TB. Bapesaka mpe na bana kelasi ya mbula 10 kino 14 soki bazui BCG na kala te.
+Nakati ya Ingɛlɛ́tɛlɛ, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi lokola ndenge ya TB ebaluki, Ingɛlɛ́tɛlɛ ekamati nzela ya kolanda bato moke baoyo bakozala na yango. Mobateli ya BCG ekeseni kolanda epayi okozala na UK, mpo TB ekozala mingi esika moko kasi ezali te esika mosusu. BCG bapesaka bana oyo bavandaka bisika ezalaka na bato mingi ya TB koleka bisika misusu, likolo ya oyo, bapesaka na bana babotami na mboka oyo ezali na bato mingi ya TB. Bapesaka mpe na bana kelasi ya mbula 10 kino 14 soki bazui BCG na kala te.
 
 == Soki olingi kokende na mboka mopaya ebongi ozua mobateli ya BCG? ==
 Soki azuaki BCG kala te esengi moto azua yango soki alingi kotambola, kovanda to kosala mosala mpona sanza moko to koleka, na mboka oyo ezalaka na bato mingi ya TB (Immunisation against Infectious Disease, 1996).
