--- a/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
+++ b/Mobéko-likonzi_mwa_sika_(Kongó-Kinsásá).mw
@@ -1,6 +1,6 @@
-[[Image:ArmsDRCbig.gif|right|150px|Democratic republic of the Congo: Coat of Arms]]
+[[Image:Armoiries de la République démocratique du Congo - 2006.png|right|150px|Democratic republic of the Congo: Coat of Arms]]
 
-'''Mobeko Likonzi mwa sika (2005)''' ya [[Repubiliki ya Kɔ́ngɔ Demokratiki]] moye mondimami, motali makambo manene maye: 
+'''Mobeko Likonzi mwa sika (2006)''' ya [[Repubiliki ya Kɔ́ngɔ Demokratiki]] moye mondimami, motali makambo manene maye: 
 
 ==Mabi matali ekolo mpe bokonzi==
 Mpo ya kolendisa bomoko bwa Ekolo boye bobebi na bitumba ndenge na ndenge mpe mpo ya kotonga bisika bia bwanya mpe bya botomboli mboka ike, bantoma bakaboli ekolo Kongo na bingumba 25, bakisa engumba ya [[Kinshasa]], binso biye bizali na makoki ma komiyangela eyebani na mobeko mpe kosala misala milongobani mitangemi na [[Mobeko Likonzi]] moye. Na botali makoki mana, bingumba bikosala misala misusu misengeli kosalema na Mbula Matari ya Ekolo, mpe kokabola misolo miyingeli na sanduku ya Ekolo na Mbula Matari zambi ya eteni ntuku minei likolo ya mokama (40%) mpo ya bingumba, mpe eteni ntuku motoba likolo ya mokama (60%) mpo ya Mbula Matari. Soki boyokani bozangi na esaleli kati ya [[Mbula Matari]] ya ekolo mpe bingumba, Ndako ya basambisi ba Mobeko Likonzi yango moko ezali na bokonzi bwa kobongisa likambo lina.
