--- a/Misalisi_ya_Mbangu.mw
+++ b/Misalisi_ya_Mbangu.mw
@@ -1,3 +1,4 @@
+[[Image:ems_nad.jpg|right|frame|Photo ..........]]
 Soki ozoki to ozali kobela makasi tango mosusu esengi bamema yo na '''misalisi ya mabangu''' na [[lopital]] ya pene na yo. Wana bafutelaka te mpe ezali mpo ya bato nyonso. Ezali na mbutu na moi. Soki mpasi eleki yo bakosalisa yo mbangu. Soki mapsi mingi te, okozela moke mpo bakokoma basango nayo.
 
 Kanisa malamu soki sante nayo esengi basala mbangu, mpo ezali mabe kopekisa baye bazali na posa ya mbangu bazua Misalisi ya Mbangu te soki yo ozali na posa na yango penza te.
@@ -46,3 +47,11 @@ Tango ambulance ekomi, yango ekomema yo ti na lopital ya misalisi ya mbangu oyo 
 
 [[Category:Móngana]]
 [[Category:Nzoto kolongono]]
+
+[[cs:Zdravotnická záchranná služba]]
+[[da:Præhospital]]
+[[de:Rettungsdienst]]
+[[fr:Aide médicale urgente]]
+[[he:רפואת חרום]]
+[[ru:Спасатель]]
+[[sv:Prehospitalt arbete]]
