--- a/Lóndɛlɛ.mw
+++ b/Lóndɛlɛ.mw
@@ -1,8 +1,8 @@
-{{ndámbo}}
+[[Image:Houses.of.parliament.overall.arp.jpg||thumb|250px|Londoni, Commune na Westminster: Parlament mpe [[Big Ben]].]]
 '''Londoni''' ezalí [[mbóka-mokonzi]] ya [[Ingɛlɛ́tɛlɛ]].
 
 
-
+{{ndámbo}}
 
 
 
