interwiki, Nkásá o libándá

--- a/Liébeleo.mw
+++ b/Liébeleo.mw
@@ -1,3 +1,58 @@
 [[category:Lokótá]]
 
+
+
+
+==Nkásá o libándá==
+* http://www.stanford.edu/class/hebrew/hsa/index.html   Cours video, Université ya Stanford
+
 {{ndambo}}
+
+[[ang:Hebrēisc sprǣc]]
+[[ar:لغة عبرية]]
+[[bg:Иврит]]
+[[br:Hebraeg]]
+[[bs:Hebrejski jezik]]
+[[ca:Hebreu]]
+[[cs:Hebrejština]]
+[[cy:Hebraeg]]
+[[da:Hebraisk (sprog)]]
+[[el:Εβραϊκή γλώσσα]]
+[[en:Hebrew language]]
+[[eo:Hebrea lingvo]]
+[[es:Idioma hebreo]]
+[[et:Heebrea keel]]
+[[fa:عبری]]
+[[fi:Heprea]]
+[[fr:Hébreu]]
+[[gl:Lingua hebrea]]
+[[he:עברית]]
+[[hu:Ivrit nyelv]]
+[[ia:Hebreo]]
+[[id:Bahasa Ibrani]]
+[[it:Lingua ebraica]]
+[[ja:ヘブライ語]]
+[[ko:히브리어]]
+[[kw:Ebrow]]
+[[lad:Idioma ebreo]]
+[[li:Hebreeuws]]
+[[nds:Hebrääsche Spraak]]
+[[nl:Hebreeuws]]
+[[nn:Hebraisk språk]]
+[[no:Hebraisk språk]]
+[[pl:Język hebrajski]]
+[[pt:Língua hebraica]]
+[[ro:Limba ebraică]]
+[[ru:Иврит]]
+[[sh:Hebrejski jezik]]
+[[simple:Hebrew language]]
+[[sk:Hebrejčina]]
+[[sl:Hebrejščina]]
+[[sr:Хебрејски језик]]
+[[sv:Hebreiska]]
+[[th:ภาษาฮีบรู]]
+[[tl:Wikang Hebreo]]
+[[tr:İbranice]]
+[[uk:Гебрейська мова]]
+[[yi:העברעיש]]
+[[zh:希伯来语]]
