--- a/Kɔ́ngɔ_belji.mw
+++ b/Kɔ́ngɔ_belji.mw
@@ -5,3 +5,9 @@
 [[Category:Afrika]]
 [[Category:Historia ya Afrika]]
 [[Category:Kɔ́ngɔ-Kinshasa]]
+
+[[bg:&#1041;&#1077;&#1083;&#1075;&#1080;&#1081;&#1089;&#1082;&#1086; &#1050;&#1086;&#1085;&#1075;&#1086;]]
+[[es:Congo Belga]]
+[[fr:Congo belge]]
+[[nl: Belgisch Congo]]
+[[pl:Kongo Belgijskie]]
