--- a/Kɔ́ngɔ_belji.mw
+++ b/Kɔ́ngɔ_belji.mw
@@ -1,6 +1,9 @@
 [[Image:Mapcongo1914.jpg|thumb|Kongo belji (1914)]]
 [[Image:Mapcongo1914-2.jpg|thumb|Kongo belji (1914)]]
 
+==Tála mpé==
+* [[Ntangó ya banɔ́kɔ́ (Kɔ́ngɔ Demokratiki)]]
+{{ndámbo}}
 
 [[Category:Afrika]]
 [[Category:Historia ya Afrika]]
