--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -1,8 +1,12 @@
-[[Category:Mokambi ekolo ya Lisanga ya Amerika|Bush, George Walker]] [[Category:Bitumba pona kobuka bobángisɛmi|Bush, George Walker]] [[Category:Ebótami na 1946|Bush, George Walker]]
+[[Category:Mokambi ekolo ya Lisanga ya Amerika|Bush, George Walker]] 
+[[Category:Bitumba pona kobuka bobángisɛmi|Bush, George Walker]] 
+[[Category:Ebótami na 1946|Bush, George Walker]]
+[[image:George-W-Bush.jpeg|250px|right|]]
 
 '''[[Media:En-us-George Walker Bush.ogg|George Walker Bush]]''' (né le [[6 yuli]] [[1946]]), mwana ya [[George Herbert Walker Bush]] mpe ya [[Barbara Pierce]], azali banda [[2001]] mokambi ekolo ya [[Lisanga ya Amerika]] ya 43e.
 
 {{Amerika (Tata-mokonzi)}}
+{{ndámbo}}
 
 [[ang:George W. Bush]]
 [[ar:جورج و. بوش]]
