--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -125,7 +125,7 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Fiji]] || [[Image:Fij-coa.gif|120px]]
 |-
-| [[Finland]] || [[Image:Finland_coa.png|120px]]
+| [[Finland]] || [[Image:Coat of arms of Finland.svg|120px]]
 |-
 | [[France]] || [[Image:Armoiries-fr.jpg|120px]]
 |-
