--- a/Mabelé.mw
+++ b/Mabelé.mw
@@ -32,36 +32,49 @@
 [[hu:Föld]]
 [[ia:Terra]]
 [[id:Bumi]]
+[[ilo:Daga (planeta)]]
 [[io:Tero]]
 [[is:Jörðin]]
 [[it:Terra]]
 [[ja:地球]]
 [[jbo:terdi]]
+[[ka:დედამიწა]]
 [[ko:지구]]
+[[ku:Erd]]
 [[kw:Dor]]
 [[la:Terra]]
 [[lb:Äerd]]
 [[li:Eerd]]
+[[lt:Žemė]]
 [[lv:Zeme]]
+[[mk:Земја]]
 [[ms:Bumi]]
+[[mt:Art]]
 [[nds:Eer]]
 [[ne:पृथ्वी]]
 [[nl:Aarde (planeet)]]
 [[nn:Jorda]]
 [[no:Jorden]]
+[[pam:Yatu]]
 [[pl:Ziemia]]
 [[pt:Terra]]
 [[ro:Pământ]]
-[[ru:Земля (планета)]]
+[[ru:Земля]]
+[[scn:Terra]]
+[[sco:The Yird]]
+[[sh:Zemlja]]
 [[simple:Earth]]
 [[sk:Zem]]
 [[sl:Zemlja]]
+[[sq:Toka]]
 [[sr:Земља (планета)]]
 [[su:Marcapada]]
 [[sv:Jorden]]
 [[sw:Ardhi]]
-[[tl:Lupa (planeta)]]
+[[ta:பூமி]]
 [[th:โลก]]
+[[tl:Lupa (planeta)]]
+[[tr:Yer (gezegen)]]
 [[uk:Земля (планета)]]
 [[vi:Trái Đất]]
 [[zh:地球]]
