robot  Ajoute: fr, ja

--- a/Bilembo-nkita_bya_Kongó-Kinsásá.mw
+++ b/Bilembo-nkita_bya_Kongó-Kinsásá.mw
@@ -20,4 +20,6 @@ Image:Armoiries de la République démocratique du Congo - 2003.svg|Almwali (200
 [[de:Wappen der Demokratischen Republik Kongo]]
 [[en:Coat of arms of the Democratic Republic of the Congo]]
 [[es:Escudo de la República Democrática del Congo]]
+[[fr:Armoiries de la République démocratique du Congo]]
 [[he:סמל הרפובליקה הדמוקרטית של קונגו]]
+[[ja:コンゴ民主共和国の国章]]
