robot  Ajoute: de, es, he, sv

--- a/Bas-Congo.mw
+++ b/Bas-Congo.mw
@@ -18,5 +18,10 @@ Okati wa Bas-Congo, makútání bingumba mingi lokola [[Boma]], [[Moanda]], [[Ba
 {{ndambo}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[de:Bas-Congo]]
 [[en:Bas-Congo]]
+[[es:Bajo Congo]]
 [[fr:Bas-Congo]]
+[[he:באס קונגו]]
+[[sv:Bas-Congo]]
