--- a/Bandundu.mw
+++ b/Bandundu.mw
@@ -7,6 +7,7 @@
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bitúká bya Kɔ́ngɔ-Kinshasa]]
 
+[[de:Bandundu]]
 [[en:Bandundu Province]]
 [[fr:Bandundu (province)]]
 [[he:באנדונדו]]
