robot  Modifie: de, en

--- a/Ekwatéli_(Kongó-Kinsásá).mw
+++ b/Ekwatéli_(Kongó-Kinsásá).mw
@@ -3,10 +3,11 @@
 
 {{ndambo}}
 
-[[de:Équateur (1966-2006)]]
-[[fr:Équateur (province)]]
-[[sv:Equateur]]
-[[en:Équateur, Congo|Equateur]]
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[de:Équateur]]
+[[en:Équateur]]
+[[fr:Équateur (province)]]
+[[sv:Equateur]]
